Fixed alignment pf main containers on all pages projects

--- a/main-menu.css
+++ b/main-menu.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #f0f1f1;
+	background-color:#219EBC;;
 }
 
 .pos-f-t{
